Update methods are implemented for userService, changes in UserModel validation
